Commit old cleanups